[package]
name = "tuntap"
version = "0.2.0"
description = "Linux TunTap bindings for tokio"
homepage = "https://github.com/manuels/tuntap.rs"
license = " GPL-2.0"
authors = ["Manuel Schölling <manuel.schoelling@gmx.de>"]
edition = "2018"

[dependencies]
bitflags = "1"
libc = "0.2.65"
tokio = "=0.2.0-alpha.6"
futures = "0.3"
nix = "0.15"
